--- a/homework1-quantinvestment.ipynb
+++ b/homework1-quantinvestment.ipynb
@@ -71,12 +71,12 @@
         "u"
       ],
       "metadata": {
-        "id": "JEhpCEOrpBAu",
-        "outputId": "67311e94-eeb9-44c3-b757-b3d81327575f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 57
-        }
+        },
+        "id": "JEhpCEOrpBAu",
+        "outputId": "67311e94-eeb9-44c3-b757-b3d81327575f"
       },
       "id": "JEhpCEOrpBAu",
       "execution_count": 5,
@@ -111,12 +111,12 @@
         "A"
       ],
       "metadata": {
-        "id": "iw3Z_DBOpvpf",
-        "outputId": "0c0d52f0-6385-47e5-cd4e-3046b01787ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        }
+        },
+        "id": "iw3Z_DBOpvpf",
+        "outputId": "0c0d52f0-6385-47e5-cd4e-3046b01787ba"
       },
       "id": "iw3Z_DBOpvpf",
       "execution_count": 7,
@@ -151,11 +151,11 @@
         "print(f'Marginal utility at W=1000: {mu.subs({W:1000, g:0.6})} \\nMarginal utility at W=1200 {mu.subs({W:1200,g:0.6})}')"
       ],
       "metadata": {
-        "id": "5Ya5g3wjr_Yk",
-        "outputId": "3ec19c89-740e-44e1-971d-2533a6fc2805",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5Ya5g3wjr_Yk",
+        "outputId": "3ec19c89-740e-44e1-971d-2533a6fc2805"
       },
       "id": "5Ya5g3wjr_Yk",
       "execution_count": 10,
@@ -225,12 +225,12 @@
         "R"
       ],
       "metadata": {
-        "id": "pEb9PxmXt1mu",
-        "outputId": "4e925c82-0445-4b9a-bd42-19ce241e68fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "pEb9PxmXt1mu",
+        "outputId": "4e925c82-0445-4b9a-bd42-19ce241e68fa"
       },
       "id": "pEb9PxmXt1mu",
       "execution_count": 11,
@@ -254,11 +254,11 @@
         "print(f'Relative coefficient of risk aversion at W=1000: {R.subs({W:1000,g:0.6}):0.4}\\nRelative coefficient of risk aversion at W=2000: {R.subs({W:2000,g:0.6}):.4}')"
       ],
       "metadata": {
-        "id": "T48QVq6VuAk-",
-        "outputId": "a44ceee9-6383-4215-d8a5-d1f7e6cfc198",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T48QVq6VuAk-",
+        "outputId": "a44ceee9-6383-4215-d8a5-d1f7e6cfc198"
       },
       "id": "T48QVq6VuAk-",
       "execution_count": 12,
@@ -360,12 +360,12 @@
         "W1"
       ],
       "metadata": {
-        "id": "lnYq5dRevFqc",
-        "outputId": "7e5d7d02-a958-495e-a63a-c2594d1b7c54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
-        }
+        },
+        "id": "lnYq5dRevFqc",
+        "outputId": "7e5d7d02-a958-495e-a63a-c2594d1b7c54"
       },
       "id": "lnYq5dRevFqc",
       "execution_count": 14,
@@ -393,15 +393,15 @@
         "U"
       ],
       "metadata": {
-        "id": "pAANoUhmwZVc",
-        "outputId": "0fd7f114-d9a7-4e75-a9b6-30911565d160",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 62
-        }
+        },
+        "id": "pAANoUhmwZVc",
+        "outputId": "110286eb-ea3e-4955-d6fc-a026c056af01"
       },
       "id": "pAANoUhmwZVc",
-      "execution_count": 17,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,7 +414,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}40.0935857181091 \\left(0.16504854368932 \\alpha + 1\\right)^{0.4}\\\\40.0935857181091 \\left(1 - 0.223300970873786 \\alpha\\right)^{0.4}\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 29
         }
       ]
     },
@@ -429,12 +429,12 @@
         "EU"
       ],
       "metadata": {
-        "id": "RQh64TViwES-",
-        "outputId": "0c7d4434-89b0-4d76-d6c1-4494eab4bfb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 39
-        }
+        },
+        "id": "RQh64TViwES-",
+        "outputId": "0c7d4434-89b0-4d76-d6c1-4494eab4bfb1"
       },
       "id": "RQh64TViwES-",
       "execution_count": 18,
@@ -459,14 +459,14 @@
         "print(f'Optimal fraction of wealth invested into risky asset: {a_opt:.4}\\nOptimal fraction of wealth invested into riskless asset: {1-a_opt:.4}')"
       ],
       "metadata": {
-        "id": "caAIRArdwsNM",
-        "outputId": "9eb62445-2414-4166-9115-45c8d4eb38a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "caAIRArdwsNM",
+        "outputId": "5bb1fa59-2cb8-4ef4-94c5-cdbfc832410a"
       },
       "id": "caAIRArdwsNM",
-      "execution_count": 21,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,11 +480,69 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "b) Compare your result with the case of log utility that we have studied in class. Which investor would invest more into the risky assets (this investor or the investor with log utility)? Can you explain why is that the case?\n",
+        "\n",
+        "PS: Write the comment in (markdown/text) cell bellow."
+      ],
       "metadata": {
         "id": "8MpF8ZOxwq5F"
       },
       "id": "8MpF8ZOxwq5F"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='crimson'>Put your comment here: </font>\n",
+        "\n",
+        "In the example with an investor with a logarithmic utility function, we calculated that they would invest ~26.3% of their wealth into the risky asset, which is less than our new investor's ~43.6%."
+      ],
+      "metadata": {
+        "id": "r-LiLKNxxWxx"
+      },
+      "id": "r-LiLKNxxWxx"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "c) Use your answer from task a) to compute the optimal number of each assets that the investor needs to buy."
+      ],
+      "metadata": {
+        "id": "LDcNNj53z09I"
+      },
+      "id": "LDcNNj53z09I"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Price of risky asset\n",
+        "ps = 50\n",
+        "\n",
+        "#price of riskless asset\n",
+        "pf = 1\n",
+        "\n",
+        "#print\n",
+        "print(f'Optimal number of riskless stock purchased: {((W0*(1-a_opt)) / pf):.4}\\nOptimal number of risky stock purchased: {((W0*a_opt)/ps):.4}')"
+      ],
+      "metadata": {
+        "id": "exMeTut1z2HW",
+        "outputId": "2957e26f-b36b-48f4-f727-6e176b387006",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "exMeTut1z2HW",
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Optimal number of riskless stock purchased: 563.9\n",
+            "Optimal number of risky stock purchased: 8.723\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
